Build ad test like fragment

--- a/res/layout/activity_likes.xml
+++ b/res/layout/activity_likes.xml
@@ -5,13 +5,11 @@
 
     <!-- The main content view -->
 
-    <RelativeLayout
+    <fragment
+        android:id="@+id/likesFragment"
+        android:name="com.picdora.likes.LikesFragment_"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        
-
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
 
