--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,8 +20,10 @@
     <color name="drawerBackground">#f2f2f2</color>
     <color name="drawerDivider">#a8a8a8</color>
     <color name="drawerText">#000000</color>
+    
+    <!--  Grid Item -->
     <color name="channel_grid_item_tint">#60000000</color>
-    <color name="channel_grid_item_tint_selected">#601cb0f6</color>
+    <color name="channel_grid_item_selected_border">#1cb0f6</color>
     <color name="channel_grid_item_tint_pressed">#60FF9111</color>
     <color name="channel_grid_item_text_color">#ffffff</color>
     
