Support for config changes in likes activity

--- a/res/layout/activity_likes.xml
+++ b/res/layout/activity_likes.xml
@@ -5,9 +5,8 @@
 
     <!-- The main content view -->
 
-    <fragment
-        android:id="@+id/likesFragment"
-        android:name="com.picdora.likes.LikesFragment_"
+    <RelativeLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
