--- a/res/menu/likes.xml
+++ b/res/menu/likes.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/channel_spinner"
-        android:icon="@drawable/ic_action_play"
+        android:icon="@drawable/ic_action_channels"
         android:orderInCategory="1"
         android:title="@string/likes_channel_spinner"
         picdora:actionViewClass="android.widget.Spinner"
