--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -25,5 +25,9 @@
     
     <!-- Notifier -->
     <dimen name="notifier_text_size">14sp</dimen>
+    
+    <!-- Actionbar spinner -->
+    <dimen name="action_spinner_item_text">18dp</dimen>
+    <dimen name="action_spinner_item_side_padding">5dp</dimen>
 
 </resources>
