--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -7,4 +7,8 @@
 		<attr name="satelliteDistance" format="dimension" />
 		<attr name="mainImage" format="reference" />		
 	</declare-styleable>
+	
+    <declare-styleable name="ActionSpinner">
+		<attr name="spinnerIcon" format="reference" />		
+	</declare-styleable>
 </resources>
