--- a/res/layout/action_spinner.xml
+++ b/res/layout/action_spinner.xml
@@ -6,6 +6,8 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:paddingLeft="@dimen/action_spinner_icon_side_padding"
+        android:paddingRight="@dimen/action_spinner_icon_side_padding"
         android:layout_centerInParent="true"
         android:src="@drawable/ic_action_sort_by_size" />
 
