--- a/res/layout/fragment_swipable_image.xml
+++ b/res/layout/fragment_swipable_image.xml
@@ -4,29 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/transparent" >
 
-    <LinearLayout
-        android:id="@+id/progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/transparent"
-        android:gravity="center" >
-
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/transparent" />
-
-        <TextView
-            android:id="@+id/progressText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/transparent"
-            android:gravity="center"
-            android:paddingLeft="12dp"
-            android:text=""
-            android:textColor="@color/white"
-            android:textSize="20dp" />
-    </LinearLayout>
+    <include layout="@layout/progress"/>
 
     <TextView
         android:id="@+id/deletedText"
