--- a/res/layout/action_spinner.xml
+++ b/res/layout/action_spinner.xml
@@ -11,7 +11,7 @@
         android:layout_centerInParent="true"
         android:src="@drawable/ic_action_sort_by_size" />
 
-    <Spinner
+    <com.picdora.ui.WrappedSpinner
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
