Collection selection fragment

--- a/res/layout/activity_collections.xml
+++ b/res/layout/activity_collections.xml
@@ -9,6 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <fragment
+        android:id="@+id/selectionFragment"
+        android:name="com.picdora.collections.CollectionSelectionFragment_"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
         
 
     </RelativeLayout>
