--- a/res/layout/fragment_selection_grid_with_new.xml
+++ b/res/layout/fragment_selection_grid_with_new.xml
@@ -26,6 +26,20 @@
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
             android:textSize="25sp" />
+
+        <Button
+            android:id="@+id/createButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/messageText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/blue_button_rounded"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Create"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <ProgressBar
