--- a/res/layout/activity_collections.xml
+++ b/res/layout/activity_collections.xml
@@ -5,18 +5,10 @@
 
     <!-- The main content view -->
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <fragment
-        android:id="@+id/selectionFragment"
-        android:name="com.picdora.collections.CollectionSelectionFragment_"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-        
-
-    </RelativeLayout>
+   <FrameLayout 
+    android:id="@+id/fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
 
