--- a/res/layout/collection_list_item.xml
+++ b/res/layout/collection_list_item.xml
@@ -5,6 +5,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:padding="8dp"
+        android:textSize="22sp" />
 
 </merge>
