--- a/res/layout/picdora_dialog.xml
+++ b/res/layout/picdora_dialog.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:layout_margin="@dimen/dialog_side_margin"
         android:background="@color/picdora_dialog_background" >
 
@@ -22,7 +23,10 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dialog_title_margin"
+                android:paddingLeft="@dimen/dialog_title_side_padding"
+                android:paddingRight="@dimen/dialog_title_side_padding"
+                android:paddingTop="@dimen/dialog_title_vertical_padding"
+                android:paddingBottom="@dimen/dialog_title_vertical_padding"
                 android:drawablePadding="@dimen/dialog_icon_margin"
                 android:gravity="left|center_vertical"
                 android:text="@string/dialog_default_title"
@@ -41,25 +45,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/titleContainer"
-            android:measureAllChildren="false">
+            android:measureAllChildren="false" >
 
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/dialog_message_margin"
                 android:gravity="left|center_vertical"
+                android:padding="@dimen/dialog_message_margin"
                 android:text="@string/dialog_default_message"
                 android:textColor="@color/picdora_dialog_message"
                 android:textSize="@dimen/dialog_message_text_size" />
-
-            <ListView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone" >
-            </ListView>
-
         </FrameLayout>
 
         <LinearLayout
