--- a/res/layout/picdora_dialog.xml
+++ b/res/layout/picdora_dialog.xml
@@ -3,14 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rootView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:gravity="center"
         android:layout_margin="@dimen/dialog_side_margin"
-        android:background="@color/picdora_dialog_background" >
+        android:background="@color/picdora_dialog_background"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:id="@+id/titleContainer"
@@ -23,12 +24,12 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/dialog_icon_margin"
+                android:gravity="left|center_vertical"
+                android:paddingBottom="@dimen/dialog_title_vertical_padding"
                 android:paddingLeft="@dimen/dialog_title_side_padding"
                 android:paddingRight="@dimen/dialog_title_side_padding"
                 android:paddingTop="@dimen/dialog_title_vertical_padding"
-                android:paddingBottom="@dimen/dialog_title_vertical_padding"
-                android:drawablePadding="@dimen/dialog_icon_margin"
-                android:gravity="left|center_vertical"
                 android:text="@string/dialog_default_title"
                 android:textColor="@color/picdora_dialog_title"
                 android:textSize="@dimen/dialog_title_text_size" />
@@ -44,8 +45,7 @@
             android:id="@+id/contentContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/titleContainer"
-            android:measureAllChildren="false" >
+            android:layout_weight="1" >
 
             <TextView
                 android:id="@+id/message"
@@ -62,7 +62,6 @@
             android:id="@+id/buttonContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/contentContainer"
             android:orientation="horizontal" >
 
             <Button
@@ -87,6 +86,6 @@
                 android:text="@string/dialog_default_positive"
                 android:textColor="@color/white" />
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
