--- a/res/layout/collection_list_item.xml
+++ b/res/layout/collection_list_item.xml
@@ -6,6 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:textSize="22sp" />
+        android:textSize="22sp" 
+        android:textColor="@color/black"/>
 
 </merge>
