--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="dialog_title_separator_height">2dp</dimen>
     <dimen name="dialog_content_margin">8dp</dimen>
     <dimen name="dialog_button_padding">5dp</dimen>
+    <dimen name="dialog_button_text_size">18sp</dimen>
     
     <!-- Notifier -->
     <dimen name="notifier_text_size">14sp</dimen>
