Change channel selection to use new selection grid

--- a/res/layout/activity_channel_selection.xml
+++ b/res/layout/activity_channel_selection.xml
@@ -6,11 +6,10 @@
 
     <!-- The main content view -->
 
-    <fragment
-        android:id="@+id/channelFragment"
-        android:name="com.picdora.channelSelection.ChannelGridFragment_"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <FrameLayout 
+    android:id="@+id/fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
 
