--- a/res/layout/activity_channel_detail.xml
+++ b/res/layout/activity_channel_detail.xml
@@ -4,9 +4,8 @@
     android:layout_height="match_parent"
     android:background="@color/activityBackground" >
 
-    <fragment
-        android:id="@+id/infoFragment"
-        android:name="com.picdora.channelDetail.ChannelInfoFragment_"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
