Move init stuff from app to launch activity

--- a/res/layout/activity_launch.xml
+++ b/res/layout/activity_launch.xml
@@ -1,16 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LaunchActivity" >
+    android:background="@color/launch_background" >
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="Picdora"
+        android:layout_centerInParent="true"
+        android:textSize="@dimen/launch_title_size"
+        android:padding="@dimen/launch_title_padding"
+        android:gravity="center"
+		android:textColor="@color/logo_color"/>
 
 </RelativeLayout>
