--- a/res/layout/fragment_swipable_image.xml
+++ b/res/layout/fragment_swipable_image.xml
@@ -5,6 +5,8 @@
     android:background="@color/transparent" >
 
     <include layout="@layout/progress"/>
+    
+    
 
     <TextView
         android:id="@+id/deletedText"
@@ -31,5 +33,18 @@
         android:id="@+id/glow"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    
+    <TextView
+        android:id="@+id/debugText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="12dp"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        android:text="debug"
+        android:textSize="20sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
